--- a/KRNL.WebMVC/Views/Cooperator/Details.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Cooperator Details</h2>
+<h2>Contact</h2>
 <p>
     @Html.ActionLink("Edit Cooperator Details", "Edit", new { id = Model.CooperatorId }) 
     @*@Html.ActionLink("Back to List", "Index")*@
