--- a/KRNL.WebMVC/Views/Cooperator/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-    <h2>Cooperator</h2>
+    <h2>Contact</h2>
 
 
 @using (Html.BeginForm())
@@ -42,8 +42,8 @@
 
     <div class="form-group">
         @Html.LabelFor(model => model.ContactType, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.ContactType, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="col-md-10 enumDropDown">
+            @Html.EnumDropDownListFor(model => model.ContactType, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.ContactType, "", new { @class = "text-danger" })
         </div>
     </div>
