--- a/KRNL.WebMVC/Views/Location/Create.cshtml
+++ b/KRNL.WebMVC/Views/Location/Create.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Add New Location</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>LocationCreate</h4>
+        @*<h4>LocationCreate</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
