--- a/KRNL.WebMVC/Views/Message/Create.cshtml
+++ b/KRNL.WebMVC/Views/Message/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Log New Job</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>MessageCreate</h4>
+        @*<h4>MessageCreate</h4>*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -70,6 +70,14 @@
             <div class="col-md-10 enumDropDown">
                 @Html.EnumDropDownListFor(model => model.JobThree, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.JobThree, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.CooperatorId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("CooperatorId", new SelectList(ViewBag.cooperators, "CooperatorId", "FullName"), null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CooperatorId, "", new { @class = "text-danger" })
             </div>
         </div>
 
